--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/microblog?serverTimezone=UTC
 spring.datasource.username=user
 spring.datasource.password=pass
+
+spring.jpa.hibernate.ddl-auto=update
